# mcp_file_url_analyzer

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  README.md  analyze-hosts.py  analyze-hosts.sh  analyze_host.py  analyze_path.py  analyze_url.py  pyproject.toml  requirements-old.txt  requirements.txt
.github/: copilot-instructions.md
.github/workflows/: main.yml
src/mcp_file_url_analyzer/: __init__.py  server.py
tests/: test_server.py
