[project]
name = "mcp-file-url-analyzer"
version = "0.1.0"
description = "Servidor MCP que analiza archivos locales o URLs proporcionadas"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles==24.1.0",
    "httpx==0.28.1",
    "pydantic==2.11.3",
    "pytest==8.3.5",
    "pytest-asyncio==0.26.0",
    "mcp>=1.6.0"
]

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project.scripts]
mcp-file-url-analyzer = "mcp_file_url_analyzer:main"
